Corrected scrollbar styling; Bug fixed: other... comments under step navi btns; Model bug fixed; Fixed comments display bug; TODO updated;

--- a/Floem_AppClient/src/app/app-core/form/form.component.css
+++ b/Floem_AppClient/src/app/app-core/form/form.component.css
@@ -68,7 +68,7 @@ mat-button-toggle-group {
 .itemListedConainer {
   border: 1px solid #ccc;
   border-radius: 4px;
-  overflow-x: auto;
+  overflow-y: hidden;
   white-space: nowrap;
   flex-wrap: nowrap;
 }
@@ -91,7 +91,7 @@ mat-button-toggle-group {
 }
 
 .scroller {
-  overflow-y: scroll;
+  overflow-x: scroll;
   scrollbar-width: thin;
 }
 
